week7/Capstone/Week 7/.k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose.yml -o ./.k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f docker-compose.yml -o ./.k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fsw205-network: "true"
        io.kompose.service: node
    spec:
      containers:
      - env:
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: docker-env-app-production-env
        image: fsw205/node-fsw205
        imagePullPolicy: ""
        name: node-fsw205
        ports:
        - containerPort: 8080
        resources: {}
        workingDir: /var/www/fsw205
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
